--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
     "framer-motion": "^11.15.0",
